# CPP_ChatGPT

./: CMakeLists.txt  Makefile  README.md
app/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  chatgpt.cxx  chatgpt.h  chatgpt_key.cxx
